fix: fixed validation admission webhook name for backup config

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/init-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/init-job.yaml
@@ -27,7 +27,7 @@ spec:
             kubectl delete secret --ignore-not-found {{ .Release.Name }}
             kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}-sgcluster
             kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}-sgpgconfig
-            kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}-sgpgbouncer
+            kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}-sgconnectionpoolingconfig
             kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}-sgprofile
             kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}-sgbackupconfig
             cat << EOF > /tmp/csr.conf
