--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -9,7 +9,7 @@ spec:
   pg_config: '{{ .Values.cluster.pgconfig }}'
   connection_pooling_config: '{{ .Values.cluster.poolingconfig }}'
   resource_profile: '{{ .Values.cluster.profile }}'
-  {{- if and .Values.config.create (or .Values.cluster.backup.volume .Values.cluster.backup.s3 .Values.cluster.backup.gcs .Values.cluster.backup.azureblob) }}
+  {{- if or .Values.cluster.backup.volume .Values.cluster.backup.s3 .Values.cluster.backup.gcs .Values.cluster.backup.azureblob }}
   backup_config: '{{ .Values.cluster.backup.name }}'
   {{- end }}
   volume_size: '{{ .Values.cluster.volumesize }}'
