--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -17,7 +17,7 @@ cluster:
   poolingconfig: pgbouncerconf
   profile: size-xs
   volumesize: 5Gi
-  storageclass: standard
+  #storageclass: ""
   backup:
     name: backupconf
     retention: 5
