--- a/stackgres-k8s/install/helm/stackgres-operator/templates/backup-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/backup-crd.yaml
@@ -32,10 +32,50 @@ spec:
                 type:
                   type: string
                   enum: [ "volume", "s3", "gcs", "azureblob" ]
-                  description: "Type of storage:\n- volume: A kubernetes volume of type nfs, cefhfs or glusterfs\n- s3: Amazon Web Services S3\n- gcs: Google Clooud Storage\n- azureblob: Azure Blob Storage"
+                  description: "Type of storage:\n- volume: A kubernetes volume source of type nfs, cefhfs or glusterfs\n- s3: Amazon Web Services S3\n- gcs: Google Clooud Storage\n- azureblob: Azure Blob Storage"
                 volume:
-                  type: string
-                  description: "A kubernetes volume name of type nfs, cefhfs or glusterfs"
+                  type: object
+                  description: "A kubernetes volume source of type nfs, cefhfs or glusterfs"
+                  properties:
+                    nfs:
+                      type: object
+                      description: "A kubernetes volume source of type nfs"
+                      properties:
+                        path:
+                          type: string
+                          description: "Path that is exported by the NFS server. More info: https://kubernetes.io/docs/concepts/storage/volumes#nfs"
+                        server:
+                          type: string
+                          description: "Server is the hostname or IP address of the NFS server. More info: https://kubernetes.io/docs/concepts/storage/volumes#nfs"
+                      required: [ "path", "server" ]
+                    glusterfs:
+                      type: object
+                      description: "A kubernetes volume source of type glusterfs"
+                      properties:
+                        path:
+                          type: string
+                          description: "Path is the Glusterfs volume path. More info: https://releases.k8s.io/HEAD/examples/volumes/glusterfs/README.md#create-a-pod"
+                        endpoints:
+                          type: string
+                          description: "EndpointsName is the endpoint name that details Glusterfs topology. More info: https://releases.k8s.io/HEAD/examples/volumes/glusterfs/README.md#create-a-pod"
+                      required: [ "path", "server" ]
+                    cephfs:
+                      type: object
+                      description: "A kubernetes volume source of type cephfs"
+                      properties:
+                        path:
+                          type: string
+                          description: "Optional: Used as the mounted root, rather than the full Ceph tree, default is /"
+                        monitors:
+                          type: string
+                          description: "Required: Monitors is a collection of Ceph monitors More info: https://releases.k8s.io/HEAD/examples/volumes/cephfs/README.md#how-to-use-it"
+                        secretRef:
+                          type: string
+                          description: "Optional: SecretRef is reference to the authentication secret for User, default is empty. More info: https://releases.k8s.io/HEAD/examples/volumes/cephfs/README.md#how-to-use-it"
+                        user:
+                          type: string
+                          description: "Optional: User is the rados user name, default is admin More info: https://releases.k8s.io/HEAD/examples/volumes/cephfs/README.md#how-to-use-it"
+                      required: [ "monitors" ]
                 s3:
                   type: object
                   description: "Amazon Web Services S3 configuration"
