--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -2,7 +2,7 @@
 apiVersion: stackgres.io/{{ .Values.crd.version }}
 kind: StackGresCluster
 metadata:
-  name: {{ .Values.cluster.name }}
+  name: {{ .Release.Name }}
 spec:
   instances: {{ .Values.cluster.instances }}
   pg_version: '{{ .Values.config.postgresql.version }}'
@@ -13,10 +13,12 @@ spec:
   backup_config: '{{ .Values.cluster.backup.name }}'
   {{- end }}
   volume_size: '{{ .Values.cluster.volumesize }}'
-  {{- if not .Values.cluster.storageclass }}
-  storage_class: ''
+  {{- if .Values.cluster.storageclass }}
+  {{- if eq "-" .Values.cluster.storageclass }}
+  storage_class: ""
   {{- else }}
-  storage_class: '{{ .Values.cluster.storageclass }}'
+  storage_class: {{ .Values.cluster.storageclass }}
+  {{- end }}
   {{- end }}
   postgres_exporter_version: '{{ .Values.config.postgres_exporter.version }}'
   envoy_version: '{{ .Values.config.envoy.version }}'
