--- a/stackgres-k8s/install/helm/stackgres-operator/templates/backup-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/backup-crd.yaml
@@ -197,10 +197,10 @@ spec:
                           required: [ "key", "name" ]
                       required: [ "account", "accessKey" ]
                     bufferSize:
-                      type: long
+                      type: integer
                       description: "Overrides the default upload buffer size of 67108864 bytes (64 MB). Note that the size of the buffer must be specified in bytes. Therefore, to use 32 MB sized buffers, this variable should be set to 33554432 bytes"
                     maxBuffers:
-                      type: int
+                      type: integer
                       description: "Overrides the default maximum number of upload buffers. By default, at most 3 buffers are used concurrently"
                   required: [ "prefix", "credentials" ]
               required: ["type"]
@@ -209,26 +209,26 @@ spec:
               description: "Backup configuration"
               properties:
                 retention:
-                  type: int
+                  type: integer
                   description: "Retains specified number of full backups. Default is 5"
                 fullSchedule:
                   type: string
                   description: "Specify when to perform full backups using cron syntax:\n<minute: 0 to 59, or *> <hour: 0 to 23, or * for any value. All times UTC> <day of the month: 1 to 31, or *> <month: 1 to 12, or *> <day of the week: 0 to 7 (0 and 7 both represent Sunday), or *>. If not specified full backups will be performed each day at 05:00 UTC"
                 fullWindow:
-                  type: int
+                  type: integer
                   description: "Specify the time window in minutes where a full backup will start happening after the point in time specified by fullSchedule. If for some reason the system is not capable to start the full backup it will be skipped. If not specified the window will be of 1 hour."
                 compressionMethod:
                   type: string
                   description: "To configure compression method used for backups. Possible options are: lz4, lzma, brotli. Default method is lz4. LZ4 is the fastest method, but compression ratio is bad. LZMA is way much slower, however it compresses backups about 6 times better than LZ4. Brotli is a good trade-off between speed and compression ratio which is about 3 times better than LZ4"
                   enum: [ "lz4", "lzma", "brotli" ]
                 networkRateLimit:
-                  type: long
+                  type: integer
                   description: "To configure the network upload rate limit during uploads in bytes per second"
                 diskRateLimit:
-                  type: long
+                  type: integer
                   description: "To configure disk read rate limit during uploads in bytes per second."
                 uploadDiskConcurrency:
-                  type: int
+                  type: integer
                   description: "To configure how many concurrency streams are reading disk during uploads. By default 1 stream."
                 pgpConfiguration:
                   type: string
@@ -248,7 +248,7 @@ spec:
                       required: [ "key", "name" ]
                   required: [ "key" ]
                 tarSizeThreshold:
-                  type: long
+                  type: integer
                   description: "To configure the size of one backup bundle (in bytes). Smaller size causes granularity and more optimal, faster recovering. It also increases the number of storage requests, so it can costs you much money. Default size is 1 GB (1 << 30 - 1 bytes)."
               required: []
           required: ["storage"]
