--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/pgconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/pgconfig-cr.yaml
@@ -8,7 +8,7 @@ metadata:
     "helm.sh/hook": "pre-install"
   {{- end }}
 spec:
-  pg_version: "{{ index (.Values.config.postgresql.version | splitList ".") 0 }}"
+  pgVersion: "{{ index (.Values.config.postgresql.version | splitList ".") 0 }}"
   postgresql.conf:
       shared_buffers: '256MB'
       random_page_cost: '1.5'
