--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/cluster-cr.yaml
@@ -5,27 +5,27 @@ metadata:
   name: {{ .Release.Name }}
 spec:
   instances: {{ .Values.cluster.instances }}
-  pg_version: '{{ .Values.config.postgresql.version }}'
-  pg_config: '{{ .Values.cluster.pgconfig }}'
-  connection_pooling_config: '{{ .Values.cluster.poolingconfig }}'
-  resource_profile: '{{ .Values.cluster.profile }}'
+  pgVersion: '{{ .Values.config.postgresql.version }}'
+  pgConfig: '{{ .Values.cluster.pgconfig }}'
+  connectionPoolingConfig: '{{ .Values.cluster.poolingconfig }}'
+  resourceProfile: '{{ .Values.cluster.profile }}'
   {{- if or .Values.cluster.backup.volume .Values.cluster.backup.s3 .Values.cluster.backup.gcs .Values.cluster.backup.azureblob }}
-  backup_config: '{{ .Values.cluster.backup.name }}'
+  backupConfig: '{{ .Values.cluster.backup.name }}'
   {{- end }}
-  volume_size: '{{ .Values.cluster.volumesize }}'
+  volumeSize: '{{ .Values.cluster.volumeSize }}'
   {{- if .Values.cluster.storageclass }}
   {{- if eq "-" .Values.cluster.storageclass }}
-  storage_class: ""
+  storageClass: ""
   {{- else }}
-  storage_class: {{ .Values.cluster.storageclass }}
+  storageClass: {{ .Values.cluster.storageclass }}
   {{- end }}
   {{- end }}
-  postgres_exporter_version: '{{ .Values.config.postgres_exporter.version }}'
-  envoy_version: '{{ .Values.config.envoy.version }}'
+  postgresExporterVersion: '{{ .Values.config.postgresExporter.version }}'
+  envoyVersion: '{{ .Values.config.envoy.version }}'
   {{- if .Values.sidecar.prometheus.create }}
-  prometheus_autobind: {{ .Values.sidecar.prometheus.allow_autobind }}
+  prometheusAutobind: {{ .Values.sidecar.prometheus.allowAutobind }}
   {{- else }}
-  prometheus_autobind: false
+  prometheusAutobind: false
   {{- end }}
   sidecars:
   {{- if .Values.sidecar.pooling }}
