--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
@@ -29,26 +29,26 @@ spec:
                 type: integer
                 # minimum: 1 # see https://gitlab.com/ongresinc/stackgres/issues/102
                 description: "Number of instances to be created"
-              pg_version:
+              pgVersion:
                 type: string
                 enum:
                 - "11.5"
                 - "12.0"
                 description: "PostgreSQL version for the new cluster"
-              pg_config:
+              pgConfig:
                 type: string
                 description: "PostgreSQL configuration to apply"
-              connection_pooling_config:
+              connectionPoolingConfig:
                 type: string
                 description: "Pooling configuration to apply"
-              resource_profile:
+              resourceProfile:
                 type: string
                 description: "Resource profile size to apply"
-              volume_size:
+              volumeSize:
                 type: string
                 pattern: '^[0-9]+(\.[0-9]+)?(Mi|Gi|Ti)$'
                 description: "Storage volume size"
-              storage_class:
+              storageClass:
                 type: string
                 description: "Storage class name to be used for the cluster"
               sidecars:
@@ -58,11 +58,11 @@ spec:
                 description: "List of sidecars to include in the cluster"
             required: [
               "instances",
-              "pg_version",
-              "pg_config",
-              "connection_pooling_config",
-              "resource_profile",
-              "volume_size",
+              "pgVersion",
+              "pgConfig",
+              "connectionPoolingConfig",
+              "resourceProfile",
+              "volumeSize",
               "sidecars"
             ]
 
