fix: added permissions to modify service monitors

--- a/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
+++ b/operator/install/kubernetes/chart/stackgres-operator/templates/cluster-role.yaml
@@ -86,6 +86,9 @@ rules:
   - list
   - get
   - create
+  - update
+  - patch
+  - delete
 - apiGroups: ["monitoring.coreos.com"]
   resources:
   - prometheus
