ci: added e2e to CI

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/validation-webhook-configuration.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/validation-webhook-configuration.yaml
@@ -95,7 +95,7 @@ webhooks:
       - operations: ["CREATE", "UPDATE", "DELETE"]
         apiGroups: ["stackgres.io"]
         apiVersions: ["*"]
-        resources: ["sgbackupconfig"]
+        resources: ["sgbackupconfigs"]
     failurePolicy: Fail
     clientConfig:
       service:
