feat: Using a cache machinanism to speed up the performance of the operator REST API
A new service has been created to hold a cache of the stackgres cluster statuses, thus prevent doing calls to the kubernetes API

Also now exposee a different object to represent the stackgres cluster in the REST than the stackgres cluster.

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -69,6 +69,8 @@ rules:
   - get
   - update
   - patch
+  - create
+  - delete
 - apiGroups: ["{{ .Values.group }}"]
   resources:
   - sgpgconfigs
