--- a/stackgres-k8s/install/helm/stackgres-operator/templates/backup-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/backup-crd.yaml
@@ -37,6 +37,10 @@ spec:
                   type: object
                   description: "A kubernetes volume source of type nfs, cefhfs or glusterfs"
                   properties:
+                    type:
+                      type: string
+                      enum: [ "nfs", "glusterfs", "cephfs" ]
+                      description: "Type of volume source"
                     nfs:
                       type: object
                       description: "A kubernetes volume source of type nfs"
@@ -58,7 +62,7 @@ spec:
                         endpoints:
                           type: string
                           description: "EndpointsName is the endpoint name that details Glusterfs topology. More info: https://releases.k8s.io/HEAD/examples/volumes/glusterfs/README.md#create-a-pod"
-                      required: [ "path", "server" ]
+                      required: [ "path", "endpoints" ]
                     cephfs:
                       type: object
                       description: "A kubernetes volume source of type cephfs"
@@ -76,6 +80,7 @@ spec:
                           type: string
                           description: "Optional: User is the rados user name, default is admin More info: https://releases.k8s.io/HEAD/examples/volumes/cephfs/README.md#how-to-use-it"
                       required: [ "monitors" ]
+                  required: [ "type" ]
                 s3:
                   type: object
                   description: "Amazon Web Services S3 configuration"
