--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -78,10 +78,13 @@ rules:
   - sgconnectionpoolingconfigs
   - sgbackupconfigs
   verbs:
+  - create
   - watch
   - list
   - get
+  - update
   - patch
+  - delete
 {{- if .Values.prometheus.allowAutobind }}
 - apiGroups: ["monitoring.coreos.com"]
   resources:
