--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/nfs-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/nfs-role.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.cluster.create .Values.cluster.backup.nfs.create }}
+{{ if and .Values.config.create .Values.cluster.backup.create (not (or .Values.cluster.backup.volume .Values.cluster.backup.s3 .Values.cluster.backup.gcs .Values.cluster.backup.azureblob)) }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
