--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/nfs-statefulset.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/nfs-statefulset.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.cluster.create .Values.cluster.backup.nfs.create }}
+{{ if and .Values.config.create .Values.cluster.backup.create (not (or .Values.cluster.backup.volume .Values.cluster.backup.s3 .Values.cluster.backup.gcs .Values.cluster.backup.azureblob)) }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: "{{ .Release.Name }}-nfs"
       containers:
       - name: nfs
-        image: quay.io/kubernetes_incubator/nfs-provisioner
+        image: gcr.io/google_containers/volume-nfs:0.8
         ports:
           - name: nfs
             containerPort: 2049
@@ -34,27 +34,27 @@ spec:
               fieldRef:
                 fieldPath: status.podIP
           - name: SERVICE_NAME
-            value: "{{ .Release.Name }}-nfs.{{ .Release.Namespace }}.svc"
+            value: "{{ .Release.Name }}-nfs.{{ .Release.Namespace }}.svc.cluster.local"
           - name: POD_NAMESPACE
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
         volumeMounts:
-          - mountPath: /export
+          - mountPath: /exports
             name: backup
   volumeClaimTemplates:
     - metadata:
         name: backup
       spec:
         accessModes: [ "ReadWriteOnce" ]
-        {{- if .Values.cluster.backup.storageclass }}
-        {{- if eq "-" .Values.cluster.backup.storageclass }}
+        {{- if .Values.cluster.backup.storageClass }}
+        {{- if eq "-" .Values.cluster.backup.storageClass }}
         storageClassName: ""
         {{- else }}
-        storageClassName: {{ .Values.cluster.backup.storageclass }}
+        storageClassName: {{ .Values.cluster.backup.storageClass }}
         {{- end }}
         {{- end }}
         resources:
           requests:
-            storage: {{ .Values.cluster.backup.size }}
+            storage: {{ .Values.cluster.backup.volumeSize }}
 {{ end }}
