--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -15,35 +15,32 @@ cluster:
   poolingconfig: pgbouncerconf
   profile: size-xs
   volumeSize: 5Gi
-  ## If defined, storageClassName: <storageclass>
+  ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
   ## If undefined (the default) or set to null, no storageClassName spec is
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
-  #storageclass: "-"
+  #storageClass: "-"
   backup:
     name: backupconf
     create: true
-    ## If defined, storageClassName: <storageclass>
-    ## If set to "-", storageClassName: "", which disables dynamic provisioning
-    ## If undefined (the default) or set to null, no storageClassName spec is
-    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-    ##   GKE, AWS & OpenStack)
-    #storageclass: "-"
-    size: 10Gi
     retention: 5
     fullSchedule: "0 5 * * *"
     fullWindow: 60
     compressionMethod: lz4
     uploadDiskConcurrency: 1
     tarSizeThreshold: 1073741823
+    ## If defined, storageClassName: <storageClass>
+    ## If set to "-", storageClassName: "", which disables dynamic provisioning
+    ## If undefined (the default) or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    #storageClass: "-" # Only affect creation of default NFS volume
     #networkRateLimit:
     #diskRateLimit:
     #pgpConfiguration:
     #  name: pgpConfiguration
     #  key: key
-    nfs:
-      create: true
     volume: {}
     #  nfs: # see https://kubernetes.io/docs/concepts/storage/volumes#nfs
     #    path:
