it: allow to define multiple it test and run them in separates JVMs

--- a/stackgres-k8s/src/operator/pom.xml
+++ b/stackgres-k8s/src/operator/pom.xml
@@ -183,7 +183,7 @@
                 <configuration>
                   <trimStackTrace>false</trimStackTrace>
                   <forkCount>1</forkCount>
-                  <reuseFork>false</reuseFork>
+                  <reuseForks>false</reuseForks>
                   <includes>
                     <include>**/It*.java</include>
                     <include>**/*It.java</include>
